@@ -10,10 +10,10 @@ import java.util.stream.Collectors;
 public class GamaToSpConvector {
 
 	public Sentence convert(ru.textanalysis.tawt.ms.model.gama.Sentence sentence) {
-		List<BearingPhrase> bearingPhrases = sentence.getBearingPhrases()
-			.stream()
+		List<BearingPhrase> bearingPhrases = sentence.getBearingPhrases().stream()
 			.map(this::convert)
-			.collect(Collectors.toList());
+			.filter(bearingPhrase -> !bearingPhrase.getWords().isEmpty())
+			.toList();
 		return new Sentence(bearingPhrases);
 	}
 
@@ -21,7 +21,8 @@ public class GamaToSpConvector {
 	public BearingPhrase convert(ru.textanalysis.tawt.ms.model.gama.BearingPhrase bearingPhrase) {
 		List<Word> words = bearingPhrase.getWords().stream()
 			.map(this::convert)
-			.collect(Collectors.toList());
+			.filter(word -> !word.getForms().isEmpty())
+			.toList();
 		return new BearingPhrase(words);
 	}
 
